<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".view.fragments.AccountFragment">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/commissions"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:baselineAligned="false">
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maker"/>
            <TextView
                    android:id="@+id/tv_AccountCommissionMaker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taker"/>
            <TextView
                    android:id="@+id/tv_AccountCommissionTaker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buyer"/>
            <TextView
                    android:id="@+id/tv_AccountCommissionBuyer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seller"/>
            <TextView
                    android:id="@+id/tv_AccountCommissionSeller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/permissions"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trade"/>
            <TextView
                    android:id="@+id/tv_AccountPermTrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw"/>
            <TextView
                    android:id="@+id/tv_AccountPermWithdraw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit"/>
            <TextView
                    android:id="@+id/tv_AccountPermDeposit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10"/>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/balance"/>
        <Button
                android:id="@+id/btn_AccountUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:text="@string/update"/>
    </FrameLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_AccountBalance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
</LinearLayout>