<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:baselineAligned="false">
    <LinearLayout
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pair_name"
/>
<TextView
        android:id="@+id/tv_ItemExchangeInfoPair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="LTCBTC"
/>
    </LinearLayout>
    <LinearLayout
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/avg_price"
/>
<TextView
        android:id="@+id/tv_ItemExInfoAvgPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="0.001241"
/>
    </LinearLayout>
    <LinearLayout
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_percent_price"
/>
<TextView
        android:id="@+id/tv_ItemExInfoPriceChangePercent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="0.001241"
/>
    </LinearLayout>
</LinearLayout>