<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:baselineAligned="false">
    <LinearLayout
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currency"
        />
        <TextView
                android:id="@+id/tv_ItemBalanceCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="LTCBTC"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_amount"
        />
        <TextView
                android:id="@+id/tv_ItemBalanceFree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="0.001241"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locked"
        />
        <TextView
                android:id="@+id/tv_ItemBalanceLocked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="0.001241"
        />
    </LinearLayout>
</LinearLayout>